Fix alignment of modal dialogs

--- a/teachers_digital_platform/css/cf-enhancements/organisms/modals.less
+++ b/teachers_digital_platform/css/cf-enhancements/organisms/modals.less
@@ -33,13 +33,15 @@
 
     &_container {
         position: fixed;
-        display: table;
+        display: flex;
+        bottom: 5%;
         top: 5%;
         left: 0;
         z-index: 2;
         padding-left: 5%;
         padding-right: 5%;
         width: 100%;
+        align-items: center;
         box-sizing: border-box;
     }
 
